# ImageViewer

./: CMakeLists.txt  ImageViewer.pro
include/: filtercustomizer.h  history.cpp  history.h  labelviewer.h  mainwindow.h  service.h
interface/: filtercustomizer.ui  mainwindow.ui  properties_dialog.ui
resources/: info_international.txt  info_rus.txt  resources.qrc  resources.qrc~
source/: filtercustomizer.cpp  history.cpp  labelviewer.cpp  main.cpp  mainwindow.cpp  mainwindow_editor.cpp  service.cpp
